--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,10 @@
 streamlit
-streamlit_webrtc
-cv2
+streamlit-webrtc
+opencv-python
 numpy
 tensorflow
 joblib
-sys
-os
-pandas 
-keras_vggface
-keras.models
-tensorflow.keras.preprocessing.image
-warnings
-av
-PIL
-io
+pandas
+Keras-vggface
+Pillow
+pyav
