--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 streamlit
 streamlit-webrtc
-opencv-python
+opencv-python-headless
 numpy
 tensorflow
 Keras
 joblib
 pandas
+Keras-vggface
 Pillow
 av
-
