--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==0.89.0
-streamlit-webrtc==0.26.1
-opencv-python-headless==4.5.3.56
-numpy==1.19.5
-tensorflow==2.6.0
-joblib==1.0.1
-pandas==1.3.3
-Keras-vggface==0.6
-av==8.0.3
-Pillow==8.3.1
+streamlit
+streamlit-webrtc
+opencv-python-headless
+numpy
+tensorflow
+joblib
+pandas
+Keras-vggface
+av
+Pillow
