--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -6,4 +6,4 @@ primaryColor="#956055"
 backgroundColor="#EBCEC8"
 secondaryBackgroundColor="#D6A095"
 textColor="#B92708"
-font="serif"
+font="monospace"
